# MyTradingProject-crypto_trading_bot

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  BeautyOfTheStruggle.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RulesFORAI.md  SECURITY.md  crypto_trading_bot.ipynb  docker-compose.yml  main.py  mypy.ini  pyproject.linux.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-streamlit.txt  requirements-web.txt  requirements.dev.txt  requirements.txt  setup.py  start_uv_project.ps1  start_uv_project.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  tests.yml
.github/workflows/.github/: commit-convention.md  commit-lint.yml  copilot-instructions.md
.vscode-config/: README.md  settings-codeium.json  settings-copilot.json  settings-core.json  settings-data.json  settings-geminicodeassist.json  settings-git.json  settings-languages.json
coverage/: coverage.json
data/: Crypto_Algorithm_Trading.ipynb  btc_df_features.csv  test_df_features.csv
scripts/: init_database.py  smoke_notify.py
src/: api.py  auth.py  backtester.py  binance_manager.py  bot_runner.py  check_db_connection.py  config.py  data_loader.py  db.py  debug_features.py  feature_diagnostics.py  feature_engineer.py  main_api.py  model_manager.py  model_registry.py  notification.py  notifier.py  settings.py  streamlit_app.py  train_model.py  visualizer.py  wait_for_postgres.py
src/models/: xgboost_model.json
src/notifications/: notification.py
src/routers/: predict.py  trades.py  webhook.py
tests/: conftest.py  test_backtester.py  test_binance_manager.py  test_bot_runner.py  test_check_db_connection.py  test_config.py  test_data_loader.py  test_db.py  test_debug_features.py  test_feature_diagnostics.py  test_feature_engineer.py  test_main_api.py  test_model_manager.py  test_model_registry.py  test_notification.py  test_notifier.py  test_run_model.py  test_run_models.py  test_run_modes.py  test_settings.py  test_streamlit_app.py  test_train_model.py  test_train_only.py  test_visualizer.py  test_wait_for_postgres.py
tests/notifications/: conftest.py  test_notification.py  test_notifier.py
tests/routers/: test_routers_predict.py  test_routers_trades.py  test_routers_webhook.py
