[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-trading-bot-1"
version = "1.1.0"
description = "A modular crypto trading bot with FastAPI backend, PostgreSQL model registry, ML pipeline, and notifier integration."
requires-python = ">=3.10"
authors = [{ name = "Ovie", email = "oviemsaniyo30@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
keywords = ["crypto", "trading", "bot", "xgboost", "machine-learning", "binance", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]


dependencies = [
    # --- Web Framework ---
    "fastapi==0.111.0",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    # --- Database ---
    "sqlalchemy==2.0.41",
    "alembic==1.16.4",
    "psycopg2-binary==2.9.9",
    # --- Configuration & Validation ---
    "python-dotenv==1.1.1",
    "pydantic==2.11.7",
    "pydantic-settings>=2.12.0",
    # --- API & HTTP ---
    "requests==2.32.4",
    "httpx>=0.24.0",
    # --- Trading & Exchange ---
    "python-binance==1.0.29",
    "ta==0.11.0",
    "backoff==2.2.1",
    # --- Notifications ---
    "python-telegram-bot==22.5",
    # --- Authentication & Security ---
    "passlib==1.7.4",
    "bcrypt==3.2.2",
    "python-jose==3.3.0",
    "email-validator==2.2.0",
    # --- Data Science & ML ---
    "pandas==2.3.0",
    "numpy==1.26.4",
    "scikit-learn==1.3.2",
    "xgboost==3.0.2",
    "imbalanced-learn==0.12.4",
    "joblib==1.5.1",
    # --- Visualization & Dashboard ---
    "matplotlib==3.10.7",
    "plotly==6.1.2",
    "streamlit>=1.28.0",
    # --- ML Experiment Tracking ---
    "mlflow==2.13.0",
    # --- Templates ---
    "jinja2==3.1.6",
]

[project.optional-dependencies]
dev = [
    # --- Linting & Formatting ---
    "ruff>=0.8.0",
    "mypy>=1.10.0",
    # --- Testing ---
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    # --- Type Stubs ---
    "types-requests>=2.31.0",
    "types-psycopg2>=2.9.0",
    "types-python-jose>=3.3.0",
    "types-passlib>=1.7.0",
    "pandas-stubs>=2.0.0",
    "types-setuptools>=69.0.0",
]

# ============================================================
# 🧹 RUFF - Fast Python Linter & Formatter
# ============================================================
[tool.ruff]
target-version = "py312"
line-length = 100
output-format = "grouped"

exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
    "migrations",
    "*.egg-info",
    ".env*",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ============================================================
# 🔍 MYPY - Static Type Checking
# ============================================================
[tool.mypy]
files = ["src", "tests"]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
check_untyped_defs = false
no_implicit_optional = false
ignore_missing_imports = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "binance.*",
    "sqlalchemy.*",
    "pydantic.*",
    "python_binance.*",
    "streamlit.*",
    "plotly.*",
    "mlflow.*",
]
ignore_missing_imports = true

# ============================================================
# 🧪 PYTEST - Testing Framework
# ============================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"

addopts = [
    "-v",
    "--maxfail=3",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-report=json",
]

filterwarnings = [
    "ignore::DeprecationWarning:sqlalchemy.*",
    "ignore::RuntimeWarning:numpy.*",
    "ignore::DeprecationWarning:distutils.*",
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests (need DB)",
    "unit: marks tests as unit tests",
]

# ============================================================
# 📦 COVERAGE - Code Coverage Analysis
# ============================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\(Protocol\\):",
]
precision = 2
show_missing = true

[project.urls]
Homepage = "https://github.com/OVIE-web/MyTradingProject-crypto_trading_bot"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

